# Framework_Markers

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readme.md
configs/camera/: gen4_camera.yaml
configs/markers/: default.yaml
include/: camera.hpp  detection_algorithm.hpp  event_reader.hpp  markers.hpp
include/utils/: buffers.hpp  visualization.hpp
src/: camera.cpp  detection_algorithm.cpp  event_reader.cpp  markers.cpp
src/utils/: buffers.cpp  options.cpp  visualization.cpp
utils/: options.cpp  options.hpp
